# cad_experiments

./: README.md  README.org  flake.nix  jcv.sh  open.py  pyproject.toml  test.py  workflow.org
cad_experiments/: utils.py
cad_experiments/tttt/: angle_bracket.py  bearing_bracket.py  bearing_jig.py  c_clamp_base.py  paste_sleeve.py  post_cap.py
meshes/: angle_bracket.stl  bearing_bracket.stl  bearing_jig.stl  c_clamp_base.stl  ex1.stl  part_projection.stl
