[tool.poetry]
name = "cad-experiments"
version = "0.1.0"
description = "mel's messing around with CAD"
authors = ["Mel Bourgeois <mason.bourgeois@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
build123d = "^0.5.0"
yacv-server = "^0.8.10"
jupyterlab = "~3.4.0"

[tool.poetry.scripts]
test = 'test:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
