[tool.poetry]
name = "cad-experiments"
version = "0.1.0"
description = "mel's messing around with CAD"
authors = ["Mel Bourgeois <mason.bourgeois@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-cadquery = "^3.5.2"
lxml-html-clean = "0.2.2"
cadquery = "^2.4.0"
jupyterlab = "~3.4.0"
build123d = "^0.7.0"

[tool.poetry.scripts]
test = 'test:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
